--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@ h6 {
 
     <section class="gallery">
       <h2>Pictures</h2>
-      <img src="https://www.freepik.com/free-photo/front-view-meat-burger-with-salad-cheese-tomatoes-dark-background_14396550.htm#query=food&position=1&from_view=keyword&track=sph/201x201" alt="">
+      <img src="https://www.freepik.com/free-photo/front-view-meat-burger-with-salad-cheese-tomatoes-dark-background_14396550.htm#query=food&position=1&from_view=keyword&track=sph" alt="">
       <img src="https://source.unsplash.com/random/202x202" alt="">
       <img src="https://source.unsplash.com/random/203x203" alt="">
       <img src="https://source.unsplash.com/random/204x204" alt="">
