--- a/index.html
+++ b/index.html
@@ -360,18 +360,18 @@ h6 {
 
     <section class="gallery">
       <h2>Pictures</h2>
-      <img src="https://www.freepik.com/free-photo/front-view-meat-burger-with-salad-cheese-tomatoes-dark-background_14396550.htm#query=food&position=1&from_view=keyword&track=sph" alt="">
-      <img src="https://source.unsplash.com/random/202x202" alt="">
-      <img src="https://source.unsplash.com/random/203x203" alt="">
-      <img src="https://source.unsplash.com/random/204x204" alt="">
-      <img src="https://source.unsplash.com/random/205x205" alt="">
-      <img src="https://source.unsplash.com/random/206x206" alt="">
-      <img src="https://source.unsplash.com/random/207x207" alt="">
-      <img src="https://source.unsplash.com/random/207x208" alt="">
-      <img src="https://source.unsplash.com/random/207x209" alt="">
-      <img src="https://source.unsplash.com/random/207x210" alt="">
-      <img src="https://source.unsplash.com/random/207x209" alt="">
-      <img src="https://source.unsplash.com/random/207x210" alt="">
+      <img src="1.png" alt="">
+      <img src="2.png" alt="">
+      <img src="3.png" alt="">
+      <img src="4.png" alt="">
+      <img src="5.png" alt="">
+      <img src="6.png" alt="">
+      <img src="7.png" alt="">
+      <img src="8.png" alt="">
+      <img src="9.png" alt="">
+      <img src="10.png" alt="">
+      <img src="11.png" alt="">
+      <img src="12.png" alt="">
     </section>
   </div>
 </body>
